--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <div>THello</div>
+        <div id ="test">THello People1111111111111</div>
+        <script src="script_1.js"></script>
     </body>
 </html>
